--- a/LaEraGamer/inicio-de-sesion.html
+++ b/LaEraGamer/inicio-de-sesion.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de sesión</title>
+    <meta name="description" content="Inicia tu sesión para realizar tus compras y agregar a tu carrito la lista de deseos para tus futuras compras en nuestro portal.">
+    <meta name="keywords" content="Inicio de sesión, Compras, Información">
+    <link rel="shortcut icon" href="../imagenes/Llave.png" type="Llave">
+    <title>La Era Gamer - Inicio de sesión</title>
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -12,7 +15,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-    <!--Link para CSS-->
+    <!-- Link para CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="body .bodySesion">
