--- a/LaEraGamer/registrate.html
+++ b/LaEraGamer/registrate.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regístrate</title>
-
+    <meta name="description" content="Regístrate con nosotros para mantenterte informado de lo que pasa en nuestra era gamer y recibir las mejores ofertas, solo en, La Era Gamer.">
+    <meta name="keywords" content="Registro, Ofertas, Descuentos, Información, Promociones">
+    <link rel="shortcut icon" href="../imagenes/Mundo.png" type="Planeta">
+    <title>La Era Gamer - Regístrate</title>
+    
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-    <!--Link para CSS-->
+    <!-- Link para CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="body">
